--- a/Anchor.toml
+++ b/Anchor.toml
@@ -11,7 +11,7 @@ atlas_dungeon = "EZ3Rap3QF8yrngyfRCZfziNDxb5PkWiQXAMJwS9vcb3t"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
